add game logic
